# python-practice

tight-binding-easy/: .gitignore  README.md  requirements.txt  run_simulation_spectrum.py
tight-binding-easy/configs/: base_lattice.yaml
tight-binding-easy/helpers/: package_version_check.ipynb
tight-binding-easy/src/: git_utils.py  linalg.py  metadata.py  models.py  path.py  simulation.py  types.py  utils.py
tight-binding-package/: .gitignore  README.md  pyproject.toml
tight-binding-package/configs/: base_square_lattice.yaml
tight-binding-package/src/mypkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tight-binding-package/src/mypkg/builder/: tb_builder.py
tight-binding-package/src/mypkg/geometry/: ab_ring.py  chain.py  config_union.py  configs.py  honeycomb.py  square.py  types.py
tight-binding-package/src/mypkg/linalg/: core.py  types.py
tight-binding-package/src/mypkg/physics/: configs.py  types.py
tight-binding-package/src/mypkg/simulation/: cli.py  configs.py  git.py  logging_utils.py  metadata.py  paths.py  run.py
tight-binding-package/src/mypkg/solver/: configs.py  run.py
tight-binding-package/src/mypkg/types/: scalars.py
tight-binding-package/src/mypkg/utils/: core.py
